Force-bump d3-color to v3.0.1

--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
   "resolutions": {
     "**/@types/node": "14.14.44",
     "**/chokidar": "^3.4.3",
+    "**/d3-color": "^3.0.1",
     "**/deepmerge": "^4.2.2",
     "**/fast-deep-equal": "^3.1.1",
     "globby/fast-glob": "3.2.5",
